<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="number"
        android:hint="@string/distance" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/total_kilometers" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="number"
        android:hint="@string/price" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/price_per_liters" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="number"
        android:hint="@string/autonomy" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/kms_per_liters" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/total_spend" />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="38sp"
        android:textAllCaps="true"
        android:textColor="@color/purple_700"
        android:text="@string/total_value" />

    <Button
        android:id="@+id/btn_total_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/calculate"
        android:textSize="20sp" />

</LinearLayout>